tests/jastadd/negative/type_errors/L4/3_ArrayDecl2.ob
MODULE TestModule;
	CONST SIZE = 10;
	TYPE t = ARRAY SIZE - 2*SIZE OF INTEGER;
END TestModule.
